Upgrade to Perst 4.05
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/plugins/XMLSpider@26584 67a373e5-eb02-0410-a15c-ee090a768436